# numeric-traits

./: .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: build-and-test.yml
include/numeric_traits/: has_int128.hpp  incomplete.hpp  int128.hpp  max_value.hpp  min_max_value.hpp
source/numeric_traits/: incomplete.cpp  int128.cpp  max_value.cpp  min_max_value.cpp  numeric_traits.cpp
